# SLOPE

./: .gitignore  README.md  pyproject.toml  run_all.py
real_data/: real_data_analysis.py
simulations/: simulation_1.py  simulation_2.py
slope/: __init__.py  solvers.py
tables/: real_data_summary.csv
tests/: test_slope.py
