[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slope-regression"
version = "0.1.0"
description = "SLOPE: Sorted L-One Penalized Estimation (Bogdan et al., 2015)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["matplotlib", "scikit-learn", "pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["slope*", "simulations*", "real_data*"]
